--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.13.0' # Specify the Flutter version you're using
+          flutter-version: '3.24.1'
           channel: 'stable'
 
       - name: Install dependencies
