Live Multi-Client Streaming

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   text_marquee: ^0.0.2
   ticker_text: ^2.1.0
   flutter_svg: ^2.0.10+1
+  network_info_plus: ^6.0.1
 
 dev_dependencies:
   flutter_test:
