--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -34,6 +34,8 @@
 	<string>This app needs access to the Documents folder to manage music files.</string>
 	<key>NSDownloadsFolderUsageDescription</key>
 	<string>This app needs access to the Downloads folder to import music files.</string>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>This app needs access to the local network to discover and connect to nearby devices for music streaming.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app requires microphone access for voice commands.</string>
 	<key>NSMusicUsageDescription</key>
@@ -45,6 +47,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
+		<string>processing</string>
 	</array>
 	<key>UIFileSharingEnabled</key>
 	<true/>
@@ -67,5 +70,12 @@
 	</array>
 	<key>UISupportsDocumentBrowser</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSAllowsLocalNetworking</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
