--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,11 @@ dependencies:
   flutter_svg: ^2.0.10+1
   network_info_plus: ^6.0.1
   image_picker: ^1.1.2
+  headset_connection_event: ^3.1.0
 
+  http: any
+  web_socket_channel: any
+  foundation: ^0.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
