--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,10 @@ dependencies:
   http: any
   web_socket_channel: any
   foundation: ^0.0.5
+  image: ^4.2.0
+  flutter_image_compress: ^2.3.0
+  cached_network_image: ^3.3.1
+  infinite_scroll_pagination: ^4.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
