--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -79,5 +79,9 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+<key>BGTaskSchedulerPermittedIdentifiers</key>
+<array>
+    <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+</array>
 </dict>
 </plist>
