--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   flutter_image_compress: ^2.3.0
   cached_network_image: ^3.3.1
   infinite_scroll_pagination: ^4.0.0
+  audio_session: ^0.1.21
 dev_dependencies:
   flutter_test:
     sdk: flutter
