--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   shared_preferences: ^2.3.2
   fuzzy: ^0.5.1
   animations: ^2.0.11
-  window_manager: ^0.4.2
+  window_manager: ^0.3.8
   audio_service: ^0.18.15
   flutter_launcher_icons: ^0.13.1
   file_picker: ^8.1.2
@@ -69,6 +69,9 @@ dependencies:
   cached_network_image: ^3.3.1
   infinite_scroll_pagination: ^4.0.0
   audio_session: ^0.1.21
+  google_sign_in: ^6.2.1
+  googleapis: ^13.1.0
+  googleapis_auth: ^1.5.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
