--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id "com.android.application"
     id "kotlin-android"
-    // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
 
@@ -11,34 +10,63 @@ android {
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = '17'
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.wmstudios.blossom"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+        //multiDexEnabled = true  // Add multidex support
     }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
+            minifyEnabled false
+            shrinkResources false
+        }
+        debug {
+            // Debug configuration
         }
     }
 }
 
 flutter {
     source = "../.."
+}
+
+dependencies {
+    implementation "androidx.multidex:multidex:2.0.1"
+}
+
+// Define tasks AFTER flutter and dependencies blocks
+tasks.register("copyDebugApk", Copy) {
+    from "${buildDir}/outputs/apk/debug"
+    into "../../build/app/outputs/flutter-apk"
+    include "*.apk"
+}
+
+tasks.register("copyReleaseApk", Copy) {
+    from "${buildDir}/outputs/apk/release" 
+    into "../../build/app/outputs/flutter-apk"
+    include "*.apk"
+}
+
+// Use afterEvaluate to ensure tasks exist before configuring them
+afterEvaluate {
+    tasks.named("assembleDebug").configure {
+        finalizedBy "copyDebugApk"
+    }
+    
+    tasks.named("assembleRelease").configure {
+        finalizedBy "copyReleaseApk"
+    }
 }
