--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   audioplayers: ^6.0.0
-  metadata_god: ^0.5.2+1
+  metadata_god: 0.5.2+1
   provider: ^6.1.2
   blur: ^4.0.0
   process_run: ^1.2.0
@@ -43,7 +43,6 @@ dependencies:
 
   path: any
   path_provider: any
-  restart_app: ^1.2.1
   intl: ^0.19.0
   shared_preferences: ^2.3.2
   fuzzy: ^0.5.1
@@ -58,7 +57,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   network_info_plus: ^6.0.1
   image_picker: ^1.1.2
-  headset_connection_event: ^3.1.0
+  headset_connection_event: ^4.0.1
 
   http: any
   web_socket_channel: any
@@ -72,6 +71,7 @@ dependencies:
   googleapis: ^13.1.0
   googleapis_auth: ^1.5.0
   confetti: ^0.8.0
+  device_info_plus: ^11.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
