--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.sourceDirectory": "/home/isaac/Documents/BlossomMegaRewrite/blossom/linux"
+    "cmake.sourceDirectory": "/home/isaac/Documents/BlossomMegaRewrite/blossom/linux",
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
