--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,17 +77,18 @@ dev_dependencies:
     sdk: flutter
 
 flutter_launcher_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
-  image_path: "assets/BlossomIcon.png"
-  min_sdk_android: 21 # android min sdk min:16, default 21
+  image_path: "ios/Runner/Assets.xcassets/AppIcon.appiconset/1024.png"
+  min_sdk_android: 21
   windows:
     generate: true
-    image_path: "assets/BlossomIcon.png"
-    icon_size: 48 # min:48, max:256, default: 48
+    image_path: "ios/Runner/Assets.xcassets/AppIcon.appiconset/1024.png"
+    icon_size: 48
   macos:
     generate: true
-    image_path: "assets/BlossomIcon.png"
+    image_path: "ios/Runner/Assets.xcassets/AppIcon.appiconset/1024.png"
+
     
   flutter_lints: ^4.0.0
 
